--- a/scss/page/_service.scss
+++ b/scss/page/_service.scss
@@ -28,6 +28,9 @@
    font-size: 12px;
    color: #6f6a6a;
    cursor: pointer;
+   &:hover {
+      color:#e3a900;
+   }
 }
 
 .breadcrumbs__link--activ {
