--- a/scss/page/_main-content__text.scss
+++ b/scss/page/_main-content__text.scss
@@ -15,7 +15,10 @@
 }
 
 .main-content__text ul {
-   list-style-position: inside;
+   list-style-position: inside;  
+   margin: 0; 
+   padding: 0; 
+   list-style: disc;
 }
 
 .main-content__text strong {
