контектный текст подправил

--- a/scss/page/_main-content__text.scss
+++ b/scss/page/_main-content__text.scss
@@ -16,9 +16,8 @@
 
 .main-content__text ul {
    list-style-position: inside;  
-   margin: 0; 
-   padding: 0; 
-   list-style: disc;
+   list-style: inside;
+   
 }
 
 .main-content__text strong {
