--- a/scss/main.scss
+++ b/scss/main.scss
@@ -36,6 +36,7 @@
 @import 'page/arenda_avto';
 @import 'page/news';
 @import 'page/arenda_nedvijenosti-inner';
+
 // слайдеры 
 
 @import 'page/_slaider';
@@ -43,4 +44,4 @@
 // адаптив
 @import 'page/media';
 
-
+@import 'page/ad';
