--- a/scss/page/_main-content__text.scss
+++ b/scss/page/_main-content__text.scss
@@ -1,6 +1,9 @@
 .main-content__text {
    margin-bottom: 40px;
 }
+.main-content__text--services {
+    margin-bottom: 15px;
+}
 .main-content__text p {
    line-height: 1.82;   
 }
