аренду недвижимости подправил

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -36,6 +36,7 @@
 @import 'page/arenda_avto';
 @import 'page/news';
 @import 'page/arenda_nedvijenosti-inner';
+@import 'page/search';
 
 // слайдеры 
 
