--- a/scss/page/_arenda_nedvijenosti-inner.scss
+++ b/scss/page/_arenda_nedvijenosti-inner.scss
@@ -5,8 +5,8 @@
 }
 
 .catalog-block__slaider {     
-   margin-right: 15px;
-   flex: 0 1 46%; 
+   margin-right: 15px;  
+   flex: 0 1 45%; 
 }
 .slaider-big {
    margin-bottom: 15px;
@@ -26,8 +26,7 @@
    height: 90px;
 }
 
-.slaider-small__pic {
-  
+.slaider-small__pic {  
    max-width: 100%;
    max-height: 100%;
    display: block;
@@ -65,4 +64,7 @@
    font-size: 30px;
    @include roboto(bold);
    color: #05328d;
+}
+.catalog-block__desc {
+   flex: 1 0 35%;
 }
