--- a/scss/page/_catalog.scss
+++ b/scss/page/_catalog.scss
@@ -37,9 +37,9 @@
 
 // }
 .catalog__pic {
-   max-width: 100%;
+   width: 100%;
    display: block;
-   // object-fit: cover;
+   object-fit: cover;
    margin-bottom: 15px;
    // max-width: 273px;
    // height: 250px
