--- a/scss/page/_main-content__text.scss
+++ b/scss/page/_main-content__text.scss
@@ -12,6 +12,7 @@
    margin-right: 10px;
    max-width: 100%;
    display: block;
+   object-fit: contain;
 }
 .main-content__text ol  {
    list-style-position: inside;
