--- a/scss/page/_slaider.scss
+++ b/scss/page/_slaider.scss
@@ -13,12 +13,19 @@
    object-fit: cover;
 }
 .slaider__title {
-   font-size: 36px;
+  font-size: 20px;
    @include roboto(bold);
+    
    color: white;
    position: absolute;
    bottom: 50px;
    left: 54px;
+   background: linear-gradient(transparent, rgb(5,50,141));
+   text-shadow: 2px 2px 2px rgba(0,0,0,.5);
+   bottom: 0;
+   left: 0px;
+   padding: 40px 16px 16px 16px;
+   width: 100%;
 
 }
 .slick-prev {
